--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "postAttachCommand": "code /workspaces/example-notebook/Running Code.ipynb",
+  "postAttachCommand": "code /workspaces/example-notebook/Running_Code.ipynb",
   "customizations": {
     "vscode": {
       "extensions": [
